Fri Jun 10 11:44:27 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_excludes.c: allowed ~ at the beginning of a path to
	  indicate the user home directory

Thu Jun  9 00:01:26 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_hurd_mach_notify.c: fixed an open() turned in concat()
	  due to privoxy filtering closes #306915.
	* server/gam_server.c: applied cleanup from Neal H. Walfield removing
	  duplicate code #306913
	* server/gam_hurd_mach_notify.c: bugfix for the Hurd backend from
	  Neal H. Walfield #306916

Wed Jun  8 23:45:28 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: patch from
	  Neal H. Walfield support for OSes that do not support LOCAL_CRED
	  closes bug #306706
	* server/Makefile.am: tidying
	* libgamin/gam_api.c: fixed a missing const #306909 (Neal H. Walfield)

Wed Jun  8 19:20:08 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: Applied patch from
	  Neal H. Walfield about non atomicity of write(), this should close
	  bug #306912

Wed Jun  8 18:30:03 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/Makefile.am: Hurd/Mach patch broke make dist

Wed Jun  8 15:55:20 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c server/gam_tree.c: moving
	  the dnotify file <-> directory mapping outside of the dnotify
	  module which doesn't have enough context.
	* python/gamin.py: fixed a bug on error cases
	* python/tests/Makefile.am python/tests/dnotify15.py: added a specific
	  test case for monitoring multiple files in busy directories

Wed Jun  8 11:34:13 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_hurd_mach_notify.c
	 server/gam_inotify.c server/gam_kqueue.c server/gam_poll.c
	 server/gam_poll.h: changed the way the kernel monitoring registration
	 is done to try to cope later with troubles with dnotify directly from
	 the gam_poll.c code.
